# PIIvot

./: .gitignore  README.md  learn.py  pyproject.toml  settings.py
config/: base_experiment.json
config/0_epoch_tests/: bert_experiment.json  deberta_experiment.json
config/bert_error_analysis/: bert_base.json  deberta_base.json
eedi_piivot/engine/: __init__.py  analyzer.py  anonymizer.py  default_analyzer_config.json  default_anonymizer_config.json  gpt_anonymizer.py
eedi_piivot/experiments/: __init__.py  config.py  experiment.py  persistence.py
eedi_piivot/modeling/: BERTDialogueDataset.py  DialogueEvaluator.py  DialogueTrainer.py  Tracker.py  __init__.py  dataset_factory.py  dialogue_dataset.py  experiment.py  model_factory.py
eedi_piivot/utils/: __init__.py  config.py  console.py  helpers.py  immutable.py  optimizer_factory.py  persistence.py  random.py  tokenizer_factory.py
experiment_configs/: base_experiment.json
experiment_configs/0_epoch_tests/: deberta_experiment.json
experiment_configs/augmented_test/: bert_base_augmented.json  bert_base_augmented_window.json  bert_base_window.json  deberta_base_augmented.json  deberta_base_augmented_window.json  deberta_base_window.json
experiment_configs/base_test/: bert_base.json  deberta_base.json
experiment_configs/bert_error_analysis/: deberta_base.json
experiment_configs/synthetic_test/: deberta_base.json  deberta_synth.json
piivot/modeling/: experiment.py
